unpackaged/main/default/objects/Opportunity/fields/Eq_Amt_Leased__c.field-meta.xml
<CustomField>
    <fullName>Eq_Amt_Leased__c</fullName>
    <description>Captures amount of equipment leased in the past.</description>
    <inlineHelpText>Pick the highes price range that the customer has leased before.</inlineHelpText>
    <label>Eq Amt Leased</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>