unpackaged/main/default/objects/Opportunity/fields/Eq_Has_Quote__c.field-meta.xml
<CustomField>
    <fullName>Eq_Has_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures if lessee has a quote for equipment.</description>
    <inlineHelpText>Check the box if the customer has a quote for the equipment that is going to be purchased.</inlineHelpText>
    <label>Eq Has Quote</label>
    <type>Checkbox</type>
</CustomField>