unpackaged/main/default/objects/Opportunity/fields/Eq_New__c.field-meta.xml
<CustomField>
    <fullName>Eq_New__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New Equipment, not used / refurbished</description>
    <inlineHelpText>Check box if equipment lessee needs is new.</inlineHelpText>
    <label>Equipment is New</label>
    <type>Checkbox</type>
</CustomField>