unpackaged/main/default/objects/Opportunity/fields/Eq_Term__c.field-meta.xml
<CustomField>
    <fullName>Eq_Term__c</fullName>
    <description>Captures term that customer has used to lease equipment in the past.</description>
    <inlineHelpText>Pick the term that the lessee has used to lease equipment in the past.</inlineHelpText>
    <label>Eq Term</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>