unpackaged/main/default/objects/Opportunity/fields/Eq_Used__c.field-meta.xml
<CustomField>
    <fullName>Eq_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used equipment / not new</description>
    <inlineHelpText>Check box if equipment lessee needs is used.</inlineHelpText>
    <label>Equipment is Used</label>
    <type>Checkbox</type>
</CustomField>