unpackaged/main/default/objects/Opportunity/fields/Eq_What__c.field-meta.xml
<CustomField>
    <fullName>Eq_What__c</fullName>
    <description>Note field describing equipment lessee needs</description>
    <inlineHelpText>Type a name / description of the equipment lessee needs.</inlineHelpText>
    <label>Equipment Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>