unpackaged/main/default/objects/Opportunity/fields/Eq_When__c.field-meta.xml
<CustomField>
    <fullName>Eq_When__c</fullName>
    <description>Range when equipment will be purchased</description>
    <inlineHelpText>Pick the date range that best describes when the lessee will be purchasing the equipment.</inlineHelpText>
    <label>Eq When</label>
    <length>128</length>
    <type>Text</type>
</CustomField>