unpackaged/main/default/objects/Opportunity/fields/Eq_Why__c.field-meta.xml
<CustomField>
    <fullName>Eq_Why__c</fullName>
    <description>Description of why the lessee needs equipment.</description>
    <inlineHelpText>Type in a description of why the customer needs equipement.</inlineHelpText>
    <label>Eq Why</label>
    <length>64</length>
    <type>Text</type>
</CustomField>