unpackaged/main/default/objects/Opportunity/fields/Eq_With_Whom__c.field-meta.xml
<CustomField>
    <fullName>Eq_With_Whom__c</fullName>
    <description>Captures who has the lessee leased with before</description>
    <inlineHelpText>Type in other companies that the lessee has leased with in the past.</inlineHelpText>
    <label>Eq With Whom</label>
    <length>64</length>
    <type>Text</type>
</CustomField>