unpackaged/main/default/objects/Opportunity/fields/Equip_Cost_Paid_By_Lender_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>Equip_Cost_Paid_By_Lender_For_Actual__c</fullName>
    <description>Equip Cost Paid By Lender for Actual</description>
    <formula>Actual_Equip_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Equip Cost Paid By Lender for Actual</inlineHelpText>
    <label>Equip Cost Paid By Lender</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>