unpackaged/main/default/objects/Opportunity/fields/Equip_Cost_Per_Doc_Request__c.field-meta.xml
<CustomField>
    <fullName>Equip_Cost_Per_Doc_Request__c</fullName>
    <description>Equipment cost as recorded at time of legal document request.</description>
    <inlineHelpText>Type in the cost of equipment as listed on the legal documents.</inlineHelpText>
    <label>Equip Cost Per Doc Request</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>