unpackaged/main/default/objects/Opportunity/fields/Equipment_Grand_Total_Summary__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Grand_Total_Summary__c</fullName>
    <description>This field will total all separate equipment costs that are associated with an opportunity.</description>
    <inlineHelpText>This field will total all separate equipment costs that are associated with an opportunity.</inlineHelpText>
    <label>Equipment Grand Total Summary</label>
    <summarizedField>FPC_Equipment__c.Grand_Total_F__c</summarizedField>
    <summaryForeignKey>FPC_Equipment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>