unpackaged/main/default/objects/Opportunity/fields/Equipment_Seller__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Seller__c</fullName>
    <description>Select the type of vendor selling the equipment.</description>
    <inlineHelpText>Select the type of vendor selling the equipment.</inlineHelpText>
    <label>Equipment Seller</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Private Party</fullName>
            </value>
            <value>
                <fullName>Sale Lease Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>