unpackaged/main/default/objects/Opportunity/fields/Est_Margin__c.field-meta.xml
<CustomField>
    <fullName>Est_Margin__c</fullName>
    <description>Estimated margin resulting from an opportunity.</description>
    <inlineHelpText>Type in the estimated margin associated with an opportunity.</inlineHelpText>
    <label>Est Margin</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>