unpackaged/main/default/objects/Opportunity/fields/Estimated_Prefund_amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Prefund_amount__c</fullName>
    <description>Estimated Prefund amount</description>
    <inlineHelpText>Type in the estimated prefund amount associated with the opportunity.</inlineHelpText>
    <label>Estimated Prefund amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>