unpackaged/main/default/objects/Opportunity/fields/Estimatedclose__c.field-meta.xml
<CustomField>
    <fullName>Estimatedclose__c</fullName>
    <description>Estimated Close Date</description>
    <inlineHelpText>Type in the estimated date of the opportunity closing. (MM/DD/YYYY)</inlineHelpText>
    <label>Estimatedclose</label>
    <type>Date</type>
</CustomField>