unpackaged/main/default/objects/Opportunity/fields/Expense_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Start_Date__c</fullName>
    <formula>Loan_Start_Date__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Start Date</label>
    <type>Date</type>
</CustomField>