unpackaged/main/default/objects/Opportunity/fields/External_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Customer_Id__c</fullName>
    <formula>Account.Underwriting_Account_Id__c</formula>
    <label>External Customer Id</label>
    <type>Text</type>
</CustomField>