unpackaged/main/default/objects/Opportunity/fields/External_Prefund__c.field-meta.xml
<CustomField>
    <fullName>External_Prefund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>External Prefund</description>
    <label>External Prefund</label>
    <type>Checkbox</type>
</CustomField>