unpackaged/main/default/objects/Opportunity/fields/FACILITY_COMPANY__c.field-meta.xml
<CustomField>
    <fullName>FACILITY_COMPANY__c</fullName>
    <description>Merchants landlord/facility management company</description>
    <inlineHelpText>Type in the name of the company/individual that is the merchants landlord.</inlineHelpText>
    <label>FACILITY_COMPANY</label>
    <length>64</length>
    <type>Text</type>
</CustomField>