unpackaged/main/default/objects/Opportunity/fields/FACILITY_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>FACILITY_CONTACT__c</fullName>
    <description>Merchants contact at facility company</description>
    <inlineHelpText>Type merchants contact at their facility company or landlord.</inlineHelpText>
    <label>FACILITY_CONTACT</label>
    <length>64</length>
    <type>Text</type>
</CustomField>