unpackaged/main/default/objects/Opportunity/fields/Facility_Is_Current__c.field-meta.xml
<CustomField>
    <fullName>Facility_Is_Current__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is captures if the customer is current on their payment.  Default = True</description>
    <inlineHelpText>This field is captures if the customer is current on their payment.  Default = True or Current</inlineHelpText>
    <label>Facility Is Current</label>
    <type>Checkbox</type>
</CustomField>