unpackaged/main/default/objects/Opportunity/fields/FACILITY_OWNED_LEASED__c.field-meta.xml
<CustomField>
    <fullName>FACILITY_OWNED_LEASED__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Facility Rent/Own Status.</description>
    <inlineHelpText>Check box if merchant owns facility business is located in.</inlineHelpText>
    <label>Facility Owned or Leased</label>
    <type>Checkbox</type>
</CustomField>