unpackaged/main/default/objects/Opportunity/fields/FACILITY_START_DATE__c.field-meta.xml
<CustomField>
    <fullName>FACILITY_START_DATE__c</fullName>
    <description>The Date in which the merchant started to occupy the facility</description>
    <inlineHelpText>Type in the date that the merchant first began occupying this facility.</inlineHelpText>
    <label>FACILITY_START_DATE</label>
    <type>Date</type>
</CustomField>