unpackaged/main/default/objects/Opportunity/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>This field is the opportunity specific fax number for the opportunity. The logic behind the field is as follows- If the Fax Number (Multiple Locations) is populated, then populate the field with that number, if it isn't populate with the Account Fax number.</description>
    <formula>IF(Fax_Number_Multiple_Locations__c = "",  Account.Fax,  Fax_Number_Multiple_Locations__c )</formula>
    <inlineHelpText>This field displays the fax number to the physical location associated with this opportunity.</inlineHelpText>
    <label>Fax</label>
    <type>Text</type>
</CustomField>