unpackaged/main/default/objects/Opportunity/fields/Fed_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Fed_Tax_Id__c</fullName>
    <description>This is a formula field for Federal Tax Id number for an Account.  This field will carry it through to the Opportunity to verify that the field is populated.  It mirrors the Doc Formula field for Fed Tax Id.  This will be in the documentation section for each product.</description>
    <formula>Account.Fed_Tax_ID__c</formula>
    <inlineHelpText>This is a read only field.  If this field is blank please check the Fed Tax Id field on the Account record.</inlineHelpText>
    <label>Fed Tax Id</label>
    <type>Text</type>
</CustomField>