unpackaged/main/default/objects/Opportunity/fields/Final_Fund_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Fund_Date__c</fullName>
    <description>This field will indicate when a deal that was prefunded was final funded by the lender.  It will be populated by workflow.</description>
    <inlineHelpText>This field will indicate when a deal that was prefunded was final funded by the lender.  It will be populated by workflow.</inlineHelpText>
    <label>Final Fund Date</label>
    <type>DateTime</type>
</CustomField>