unpackaged/main/default/objects/Opportunity/fields/First_Card_Date_As_Owner__c.field-meta.xml
<CustomField>
    <fullName>First_Card_Date_As_Owner__c</fullName>
    <description>What date did the current owner(s) begin accepting credit cards?</description>
    <inlineHelpText>What date did the current owner(s) begin accepting credit cards?</inlineHelpText>
    <label>First Card Date As Owner</label>
    <type>Date</type>
</CustomField>