unpackaged/main/default/objects/Opportunity/fields/First_Due_Lender__c.field-meta.xml
<CustomField>
    <fullName>First_Due_Lender__c</fullName>
    <description>Date that first payment is due to a lender.</description>
    <inlineHelpText>Type in the date that the first lease payment is due to the lender.</inlineHelpText>
    <label>First Due Lender</label>
    <type>DateTime</type>
</CustomField>