unpackaged/main/default/objects/Opportunity/fields/FlagToClickCalculateActuals__c.field-meta.xml
<CustomField>
    <fullName>FlagToClickCalculateActuals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>just a flag, please don't update manually.
trigger CalculateActualFromOpportunity will fire when this field value is true;
and the value of this field is set by code.</description>
    <inlineHelpText>just a flag, please don't update manually.
trigger CalculateActualFromOpportunity will fire when this field value is true;
and the value of this field is set by code.</inlineHelpText>
    <label>FlagToClickCalculateActuals</label>
    <type>Checkbox</type>
</CustomField>