unpackaged/main/default/objects/Opportunity/fields/FPC_Bad_Debt_Fee__c.field-meta.xml
<CustomField>
    <fullName>FPC_Bad_Debt_Fee__c</fullName>
    <description>Bad Debt Cost</description>
    <inlineHelpText>Type in the amount of FPC's internal bad debt cost.</inlineHelpText>
    <label>Bad Debt Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>