unpackaged/main/default/objects/Opportunity/fields/FPC_Int_Doc_Fee__c.field-meta.xml
<CustomField>
    <fullName>FPC_Int_Doc_Fee__c</fullName>
    <description>FPC Internal Doc Fee</description>
    <inlineHelpText>Type in the amount of FPC's internal doc fee.</inlineHelpText>
    <label>FPC Int Doc Fee</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>