unpackaged/main/default/objects/Opportunity/fields/FPC_Interest_Settlement__c.field-meta.xml
<CustomField>
    <fullName>FPC_Interest_Settlement__c</fullName>
    <description>FPC interest settlement</description>
    <inlineHelpText>Type in the amount of FPC's interest settlement.</inlineHelpText>
    <label>FPC Interest Settlement</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>