unpackaged/main/default/objects/Opportunity/fields/FPC_Margin_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>FPC_Margin_For_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FPC_Margin_For_Actual</description>
    <inlineHelpText>FPC_Margin_For_Actual</inlineHelpText>
    <label>FPC Margin</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>