unpackaged/main/default/objects/Opportunity/fields/FPC_Rep_Margin__c.field-meta.xml
<CustomField>
    <fullName>FPC_Rep_Margin__c</fullName>
    <formula>IF(RecordTypeId = "01280000000BZvi",  Net_Margin_For_Actual__c , IF(RecordTypeId = "01280000000BZwl" ,  Actual_FPC_Margin_w_o_Doc_Fee__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FPC Rep Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>