unpackaged/main/default/objects/Opportunity/fields/Fund_Date__c.field-meta.xml
<CustomField>
    <fullName>Fund_Date__c</fullName>
    <description>Date that the opportunity funded.</description>
    <inlineHelpText>Type in the date that the opportunity was funded. (MM/DD/YYYY)</inlineHelpText>
    <label>Fund Date</label>
    <type>DateTime</type>
</CustomField>