unpackaged/main/default/objects/Opportunity/fields/Fund_Date_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>Fund_Date_For_Actual__c</fullName>
    <description>Fund Date for actuals</description>
    <inlineHelpText>Fund Date for actuals</inlineHelpText>
    <label>Actual Fund Date</label>
    <type>DateTime</type>
</CustomField>