unpackaged/main/default/objects/Opportunity/fields/Funded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funded_Amount__c</fullName>
    <description>This field combines the Merchant field "Actual Amount Offered" with the Lease field "Actual Equip Cost".  This field allows for Reporting on funded amounts in one place.  Will be used in marketing reports.</description>
    <formula>IF( 
OR(
ISPICKVAL( StageName , "Funded") , 
ISPICKVAL( StageName , "External Collections") 
),
Actual_Equip_Cost__c  +  ACTUAL_AMT_OFFERED__c, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field combines the Merchant field "Actual Amount Offered" with the Lease field "Actual Equip Cost".  This field allows for Reporting on funded amounts in one place.  Will be used in marketing reports.</inlineHelpText>
    <label>Funded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>