unpackaged/main/default/objects/Opportunity/fields/Funds_Released_By__c.field-meta.xml
<CustomField>
    <fullName>Funds_Released_By__c</fullName>
    <description>This field will indicate how funds need to be released to the customer and any other party that needs funding as result of this transaction.</description>
    <inlineHelpText>This field will indicate how funds need to be released to the customer and any other party that needs funding as result of this transaction.</inlineHelpText>
    <label>Funds Released By:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>ACH &amp; Wire</fullName>
            </value>
            <value>
                <fullName>ACH &amp; Check</fullName>
            </value>
            <value>
                <fullName>Wire &amp; Check</fullName>
            </value>
            <value>
                <fullName>ACH &amp; Wire &amp; Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>