unpackaged/main/default/objects/Opportunity/fields/Guarantor_3_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_3_Phone__c</fullName>
    <label>Guarantor 3 Phone</label>
    <type>Phone</type>
</CustomField>