unpackaged/main/default/objects/Opportunity/fields/Initial_Customer_Form__c.field-meta.xml
<CustomField>
    <fullName>Initial_Customer_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Customer Form</label>
    <referenceTo>Customer_Form__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>