unpackaged/main/default/objects/Opportunity/fields/Int_Settlement_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>Int_Settlement_For_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Int_Settlement_For_Actual</description>
    <inlineHelpText>Int_Settlement_For_Actual</inlineHelpText>
    <label>Int. Settlement</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>