unpackaged/main/default/objects/Opportunity/fields/Interest_Settlement_Days_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>Interest_Settlement_Days_For_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Interest_Settlement_Days_For_Actual</description>
    <inlineHelpText>Interest_Settlement_Days_For_Actual</inlineHelpText>
    <label>Interest Settlement Days</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>