unpackaged/main/default/objects/Opportunity/fields/Interim_Rent__c.field-meta.xml
<CustomField>
    <fullName>Interim_Rent__c</fullName>
    <description>Interim Rent</description>
    <inlineHelpText>Type in the interim rent amount resulting from a Closed-Won opportunity.</inlineHelpText>
    <label>Interim Rent</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>