unpackaged/main/default/objects/Opportunity/fields/Interim_Rent_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>Interim_Rent_For_Actual__c</fullName>
    <description>Interim_Rent_For_Actual</description>
    <inlineHelpText>Interim_Rent_For_Actual</inlineHelpText>
    <label>Interim Rent</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>