unpackaged/main/default/objects/Opportunity/fields/Internal_Credit_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Internal_Credit_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Credit Analyst</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Id</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Internal_Credit_Analyst</relationshipName>
    <type>Lookup</type>
</CustomField>