unpackaged/main/default/objects/Opportunity/fields/Internal_Pend_Info_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Pend_Info_Date__c</fullName>
    <description>This field will capture the date and time that the opportunity was last put into the stage of "Internal Pend Info".</description>
    <inlineHelpText>This field will capture the date and time that the opportunity was last put into the stage of "Internal Pend Info".</inlineHelpText>
    <label>Internal Pend Info Date</label>
    <type>DateTime</type>
</CustomField>