unpackaged/main/default/objects/Opportunity/fields/Internal_Prefund__c.field-meta.xml
<CustomField>
    <fullName>Internal_Prefund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if an opportunity is an internally prefunded.</description>
    <inlineHelpText>Check this box if the opportunity is internally prefunded.</inlineHelpText>
    <label>Internal Prefund</label>
    <type>Checkbox</type>
</CustomField>