unpackaged/main/default/objects/Opportunity/fields/Internal_Renewal_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Renewal_Number__c</fullName>
    <label>Internal Renewal Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>