unpackaged/main/default/objects/Opportunity/fields/Last_Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Description__c</fullName>
    <label>Last Activity Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>