unpackaged/main/default/objects/Opportunity/fields/Last_Activity_Display__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Display__c</fullName>
    <formula>Last_Activity_Date__c</formula>
    <label>Last Activity Display</label>
    <type>Date</type>
</CustomField>