unpackaged/main/default/objects/Opportunity/fields/Last_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Milestone_Date__c</fullName>
    <label>Last Milestone Date</label>
    <type>Date</type>
</CustomField>