unpackaged/main/default/objects/Opportunity/fields/Last_Payment_Made_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Made_Date__c</fullName>
    <description>This field will capture the most recent date that a payment was made to National Funding on a business loan or lease. This will be updated by nightly process.</description>
    <inlineHelpText>This field will capture the most recent date that a payment was made to National Funding on a business loan or lease. This will be updated by nightly process.</inlineHelpText>
    <label>Last Payment Made Date</label>
    <type>Date</type>
</CustomField>