unpackaged/main/default/objects/Opportunity/fields/Last_Vonage_Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Last_Vonage_Call_Disposition__c</fullName>
    <label>Last Vonage Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vonage_Call_Dispositions</valueSetName>
    </valueSet>
</CustomField>