unpackaged/main/default/objects/Opportunity/fields/Lease_Deposit_Amount_Received_2__c.field-meta.xml
<CustomField>
    <fullName>Lease_Deposit_Amount_Received_2__c</fullName>
    <label>Lease Deposit Amount Received 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>