unpackaged/main/default/objects/Opportunity/fields/Lease_Deposit_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Lease_Deposit_Amount_Received__c</fullName>
    <description>Lease Deposit Check Amount Received</description>
    <inlineHelpText>Lease Deposit Check Amount Received</inlineHelpText>
    <label>Lease Deposit Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>