unpackaged/main/default/objects/Opportunity/fields/Lease_Deposit_Check_Bounced_Reason_2__c.field-meta.xml
<CustomField>
    <fullName>Lease_Deposit_Check_Bounced_Reason_2__c</fullName>
    <label>Lease Deposit Check Bounced Reason 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lease_Deposit_Check_Bounced_2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient Funds</fullName>
            </value>
            <value>
                <fullName>Account Closed</fullName>
            </value>
            <value>
                <fullName>No Account/Unable to Locate Account</fullName>
            </value>
            <value>
                <fullName>Authorization Revoked by Customer</fullName>
            </value>
            <value>
                <fullName>Payment Stopped or Stop Payment on Item</fullName>
            </value>
            <value>
                <fullName>Customer Advises Not Authorized</fullName>
            </value>
            <value>
                <fullName>Reason Not Provided</fullName>
            </value>
            <value>
                <fullName>Signatures Not Genuine or Item Altered</fullName>
            </value>
            <value>
                <fullName>Account Frozen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>