unpackaged/main/default/objects/Opportunity/fields/Lease_Deposit_Check_Received__c.field-meta.xml
<CustomField>
    <fullName>Lease_Deposit_Check_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will notate that a Deposit Check has been received by the accounting team.  This field must be populated to create a Lease Plus Number.  It is a required value in the Lease Plus number trigger.</description>
    <inlineHelpText>Check this box when the accounting team has received the lease deposit check.</inlineHelpText>
    <label>Lease Deposit Check Received</label>
    <type>Checkbox</type>
</CustomField>