unpackaged/main/default/objects/Opportunity/fields/Lease_Deposit_Check_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Deposit_Check_Received_Date__c</fullName>
    <description>This field will capture the date in which the Lease Deposit Check was received through a workflow.  This field is used in the Lease Plus integration as a flag for import.</description>
    <inlineHelpText>This field will capture the date in which the Lease Deposit Check was received through a workflow.  This field is used in the Lease Plus integration as a flag for import.</inlineHelpText>
    <label>Lease Deposit Check Received Date</label>
    <type>Date</type>
</CustomField>