unpackaged/main/default/objects/Opportunity/fields/Legal_Land_Desc_For_Actual__c.field-meta.xml
<CustomField>
    <fullName>Legal_Land_Desc_For_Actual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Legal Land Desc For Actual</description>
    <inlineHelpText>Legal Land Desc For Actual</inlineHelpText>
    <label>Legal Land Desc</label>
    <type>Checkbox</type>
</CustomField>