unpackaged/main/default/objects/Opportunity/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>This is a formula field that displays the Legal Name of an account on the Opportunity Record.</description>
    <formula>Account.Legal_Name__c</formula>
    <inlineHelpText>This is a read only field that displays the Legal Name of an account on the Opportunity Record.</inlineHelpText>
    <label>Legal Name</label>
    <type>Text</type>
</CustomField>