unpackaged/main/default/objects/Opportunity/fields/Legal_Name_and_DBA__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name_and_DBA__c</fullName>
    <formula>IF(ISNULL( Company_DBA__c ), Account.Legal_Name__c ,Account.Legal_Name__c &amp;" DBA "&amp; Company_DBA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Name and DBA</label>
    <type>Text</type>
</CustomField>