unpackaged/main/default/objects/Opportunity/fields/Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status__c</fullName>
    <description>This field is a formula field that carries over into the opportunity.  It mirrors the doc formulas fields that indicate Legal Status of the business.  (Corp, LLC, Partnership, Sole)  This will be a reference for the ops team to use when creating legal docs.</description>
    <formula>TEXT(Account.Legal_Status__c)</formula>
    <inlineHelpText>This is a read only field.  If this field is blank, please populate the Legal Status field on the Account record.</inlineHelpText>
    <label>Legal Status</label>
    <type>Text</type>
</CustomField>